# desk-claw

./: .gitignore  LICENSE  README.md
.github/workflows/: ci-cd.yml  ci.yml  docker.yml  ghcr-release.yml  pages.yml
executive-ops-copilot-v0/: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
executive-ops-copilot-v0/ai_backend/: .dockerignore  Dockerfile  config.py  main.py  pyproject.toml  requirements.txt  schemas.py
executive-ops-copilot-v0/backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
executive-ops-copilot-v0/backend/app/: main.py  models.py
executive-ops-copilot-v0/backend/app/agents/: __init__.py  agent.py  scheduling.py
executive-ops-copilot-v0/backend/app/api/: audit.py  calendar.py  deps.py  drafts.py  evals.py  feedback.py  metrics.py  recommendations.py  requests.py  routes.py  rules.py  telemetry.py
executive-ops-copilot-v0/backend/app/core/: errors.py  settings.py
executive-ops-copilot-v0/backend/app/db/: audit.py  decision_log.py  models.py  session.py
executive-ops-copilot-v0/backend/app/evals/: adk_runner.py  run_basic.py  runner.py
executive-ops-copilot-v0/backend/app/llm/: ollama_client.py  output_parser.py  prompts.py  schemas.py
executive-ops-copilot-v0/backend/app/services/: ai_config_service.py  audit_service.py  calendar.py  calendar_analyzer.py  decision_log.py  draft_service.py  drafter.py  model_warmup.py  parser.py  recommendation_service.py  recommender.py  request_parser.py  risk_classifier.py  rules.py  rules_engine.py  telemetry_service.py  workflow_decision_log.py
executive-ops-copilot-v0/backend/app/telemetry/: __init__.py  ai_quality.py  prometheus.py
executive-ops-copilot-v0/backend/tests/: conftest.py
executive-ops-copilot-v0/backend/tests/contract/: test_api_contract.py  test_api_contracts.py  test_gap_endpoints.py  test_json_schema_contracts.py  test_parse_request_api.py
executive-ops-copilot-v0/backend/tests/integration/: test_postgres_database.py
executive-ops-copilot-v0/backend/tests/unit/: test_ai_config_service.py  test_ai_quality_telemetry.py  test_audit_repository.py  test_calendar_analyzer.py  test_cors_config.py  test_database_session.py  test_decision_log.py  test_draft_service.py  test_model_warmup.py  test_recommendation_service.py  test_request_parser.py  test_rules_engine.py  test_scheduling_agent.py  test_services.py
executive-ops-copilot-v0/eval_backend/: .dockerignore  Dockerfile  pyproject.toml
executive-ops-copilot-v0/eval_backend/app/: main.py  runner.py  schemas.py  scoring.py  seed_cases.json  settings.py  store.py
executive-ops-copilot-v0/eval_backend/tests/: conftest.py  test_eval_backend.py
executive-ops-copilot-v0/web_backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
executive-ops-copilot-v0/web_backend/app/: main.py
executive-ops-copilot-v0/web_backend/app/agents/: __init__.py  scheduling.py
executive-ops-copilot-v0/web_backend/app/api/: deps.py  requests.py
executive-ops-copilot-v0/web_backend/app/core/: errors.py  settings.py
executive-ops-copilot-v0/web_backend/app/services/: ai_client.py  ai_config_service.py  draft_service.py  model_warmup.py  recommendation_service.py  request_parser.py
executive-ops-copilot-v0/web_backend/tests/: conftest.py
executive-ops-copilot-v0/web_backend/tests/contract/: test_parse_request_api.py
executive-ops-copilot-v0/web_backend/tests/unit/: test_ai_client.py  test_ai_config_service.py  test_request_parser.py  test_scheduling_agent.py  test_service_separation.py
infra/k8s/: README.md  (+15 more)
(+157 files in other folders)
