[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "executive-ops-copilot-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "Deprecated>=1.2.14",
  "fastapi>=0.110",
  "google-adk==0.4.0",
  "litellm>=1.65.5",
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "tabulate>=0.9",
  "uvicorn[standard]>=0.29",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-mock>=3.14",
  "httpx>=0.27",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
  "evals: tests that execute the ADK eval endpoint and should run in the evals CI job",
]
